# pipeline-ai-sandbox

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.txt  NEW-REPO-PLAN.md  README.md  RUNNING-LOCALLY.md  k8-platform-migration-report.md  pyproject.toml  pytest.ini  requirements-dev.txt
.agent/scripts/: lock_and_sweep.py
.github/workflows/: contract-tests.yml  test-harness-ci.yml
retrospective/: 2026-05-15-01.md  2026-05-16-2.md  2026-05-17-6.md  2026-05-17-8.md  AGENTS-suggestions.md
retrospective/2026-05-16-2/: AGENTS-suggestions.md  honest-synthetic-harness-spec.md  orphan-branch-safe-creation-spec.md  runner-template-generation-spec.md  vendored-bundle-discipline-spec.md
retrospective/2026-05-17-6/: AGENTS-suggestions.md  live-observer-pattern-spec.md  reproduce-ci-locally-spec.md
retrospective/2026-05-17-8/: AGENTS-suggestions.md  ask-before-adding-cicd-spec.md  tightly-scope-github-actions-spec.md
runs/Vs1aL/: report.md  state.json  test-results.md
test-harness/lib/: __init__.py  archetype_loader.py  assertions.py  envelopes.py  github_client_factory.py  live_observe.py  scenario_runner.py  state.py  synthetic_drivers.py  synthetic_observe.py
test-harness/runners/: batch-job-branch-sha-mismatch.py  batch-job-happy-path.py  batch-job-parse-error.py  batch-job-runner-pickup-timeout.py  composition-guide-render.py  multi-scenario-soak.py  onboarding-blank-repo.py  onboarding-decline.py  onboarding-existing-agents-md.py  onboarding-resume-mid-interview.py  onboarding-revise.py  orchestrate-issue-parallel-fanout.py  orchestrate-issue-restart-recovery.py  (+5 more)
(+23 files in other folders)
